--- a/client/src/styles/_config.scss
+++ b/client/src/styles/_config.scss
@@ -3,3 +3,4 @@ $light-mode-background: #f8f8f8;
 $light-mode-navbar-bg: #373b53;
 $home-icon-dark-purp: #7c5dfa;
 $home-icon-light-purp: #9277ff;
+$dark-mode-background: #141625;
