--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -10,8 +10,7 @@
 
 body {
   font-family: 'Spartan', sans-serif;
-  background: $dark-mode-background;
-  // background: $light-mode-background;
+  background: $light-mode-background;
 }
 
 #main-app {
