new invoice validation

--- a/client/src/styles/_utilities.scss
+++ b/client/src/styles/_utilities.scss
@@ -600,6 +600,9 @@ input[type='email'] {
 // Alert State Border
 .alert {
   border: 1px solid #ec5757;
+  &:hover {
+    border: 1px solid #ec5757;
+  }
 }
 
 // Alert State Messages
