--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -631,6 +631,11 @@ body {
           position: absolute;
           top: 0;
           right: 0;
+          #td-sender-address {
+            p {
+              float: right;
+            }
+          }
         }
       }
       #details-card-items {
@@ -726,6 +731,12 @@ body {
               color: #ffffff;
             }
           }
+          #random-x {
+            font-weight: 700;
+            font-size: 16px;
+            color: #7e88c3;
+            display: none;
+          }
         }
       }
       #details-card-total {
@@ -747,12 +758,23 @@ body {
           color: #ffffff;
         }
 
+        #grand-total {
+          font-size: 11px;
+          font-weight: 500;
+          color: #ffffff;
+          display: none;
+        }
+
         #dc-total {
           font-size: 24px;
           font-weight: 700;
           color: #ffffff;
         }
       }
+    }
+
+    #mobile-footer {
+      display: none;
     }
   }
 }
